@@ -253,7 +253,7 @@ public class JoiningVar extends Par5s {
                 {
                     Record systreefRec = eSystree.find(winc.nuni);
                     String[] arr = rec.getStr(TEXT).split(";");
-                    List<String> arrList = Arrays.asList(arr);
+                    List<String> arrList = List.of(arr);
                     boolean ret = false;
                     for (String str : arrList) {
                         if (systreefRec.getInt(eSystree.types) == Integer.valueOf(str) == true) {
